# subsurface

./: .env  .gitignore  README.md  VERSION  pyproject.toml  requirements.txt
examples/: mcmc.py  shuffle.py
src/: imports.py  markovchain.py  tools.py  voronoi.py
subsurface/: __init__.py  _markovchain.py  _shuffle.py  _voronoi.py  construction.py  imports.py  markovchain.py  metrics.py  plotting.py  tools.py  voronoi.py  write.py
